overflow btn fixed with css

--- a/css/components/ui/card-app.scss
+++ b/css/components/ui/card-app.scss
@@ -28,6 +28,19 @@
       padding: 0;
       margin-top: auto;
       padding-top: 40px;
+      .long-text{
+        margin: auto;
+        @media only screen and (max-width: map-get($breakpoints, large)) and (min-width: map-get($breakpoints, medium)) {
+          display:none;
+        }
+      }
+      .short-text{
+        margin: auto;
+        display: none;
+        @media only screen and (max-width: map-get($breakpoints, large)) and (min-width: map-get($breakpoints, medium))  {
+          display:flex;
+        }
+      }
     }
   }
 
